--- a/src/GUI/DirectoryWidget/GUI_DirectoryWidget.ui
+++ b/src/GUI/DirectoryWidget/GUI_DirectoryWidget.ui
@@ -125,7 +125,7 @@
         </size>
        </property>
        <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
+        <enum>Qt::ClickFocus</enum>
        </property>
       </widget>
      </item>
