--- a/src/GUI/PreferenceDialog/GUI_PreferenceDialog.ui
+++ b/src/GUI/PreferenceDialog/GUI_PreferenceDialog.ui
@@ -94,6 +94,16 @@
    <item row="4" column="0">
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
+      <widget class="QLabel" name="label_2">
+       <property name="text">
+        <string>IP addresses</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QComboBox" name="combo_ips"/>
+     </item>
+     <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
