--- a/src/GUI/RemoteControl/GUI_RemoteControl.ui
+++ b/src/GUI/RemoteControl/GUI_RemoteControl.ui
@@ -7,25 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>109</height>
+    <height>162</height>
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="3" column="0">
-    <widget class="QLabel" name="label">
-     <property name="text">
-      <string>Port</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="0" colspan="2">
-    <widget class="Line" name="line">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="1">
+   <property name="spacing">
+    <number>10</number>
+   </property>
+   <item row="0" column="1">
     <widget class="QCheckBox" name="cb_activate">
      <property name="layoutDirection">
       <enum>Qt::LeftToRight</enum>
@@ -35,28 +24,38 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="0">
+   <item row="2" column="0" colspan="2">
+    <widget class="Line" name="line_2">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>Port</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="1">
+    <widget class="QLineEdit" name="le_url"/>
+   </item>
+   <item row="0" column="0">
     <widget class="QLabel" name="label_2">
      <property name="text">
       <string>Activate</string>
      </property>
     </widget>
    </item>
-   <item row="0" column="0" colspan="2">
-    <widget class="QLabel" name="lab_title">
-     <property name="font">
-      <font>
-       <pointsize>11</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
+   <item row="3" column="0">
+    <widget class="QLabel" name="lab_url">
      <property name="text">
-      <string>Remote control</string>
+      <string>Remote control URL</string>
      </property>
     </widget>
    </item>
-   <item row="3" column="1">
+   <item row="1" column="1">
     <widget class="QSpinBox" name="sb_port">
      <property name="maximum">
       <number>65000</number>
