--- a/src/GUI/Preferences/LastFM/GUI_LastFM.ui
+++ b/src/GUI/Preferences/LastFM/GUI_LastFM.ui
@@ -7,16 +7,13 @@
     <x>0</x>
     <y>0</y>
     <width>457</width>
-    <height>147</height>
+    <height>177</height>
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <property name="spacing">
     <number>10</number>
    </property>
-   <item row="2" column="1">
-    <widget class="QLineEdit" name="tf_username"/>
-   </item>
    <item row="1" column="0">
     <widget class="QLabel" name="label_4">
      <property name="text">
@@ -31,13 +28,6 @@
      </property>
     </widget>
    </item>
-   <item row="3" column="1">
-    <widget class="QLineEdit" name="tf_password">
-     <property name="echoMode">
-      <enum>QLineEdit::Password</enum>
-     </property>
-    </widget>
-   </item>
    <item row="3" column="0">
     <widget class="QLabel" name="label_3">
      <property name="text">
@@ -45,7 +35,44 @@
      </property>
     </widget>
    </item>
-   <item row="4" column="0" colspan="2">
+   <item row="1" column="1">
+    <widget class="QCheckBox" name="cb_activate">
+     <property name="focusPolicy">
+      <enum>Qt::StrongFocus</enum>
+     </property>
+     <property name="layoutDirection">
+      <enum>Qt::LeftToRight</enum>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="0">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>Scrobble after</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="1">
+    <widget class="QSpinBox" name="sb_scrobble_time">
+     <property name="minimum">
+      <number>5</number>
+     </property>
+     <property name="value">
+      <number>10</number>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="2">
+    <widget class="QLabel" name="label_5">
+     <property name="text">
+      <string>sec</string>
+     </property>
+    </widget>
+   </item>
+   <item row="5" column="0" colspan="3">
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QLabel" name="lab_status">
@@ -76,18 +103,15 @@
      </item>
     </layout>
    </item>
-   <item row="1" column="1">
-    <widget class="QCheckBox" name="cb_activate">
-     <property name="focusPolicy">
-      <enum>Qt::StrongFocus</enum>
-     </property>
-     <property name="layoutDirection">
-      <enum>Qt::LeftToRight</enum>
-     </property>
-     <property name="text">
-      <string/>
+   <item row="3" column="1" colspan="2">
+    <widget class="QLineEdit" name="tf_password">
+     <property name="echoMode">
+      <enum>QLineEdit::Password</enum>
      </property>
     </widget>
+   </item>
+   <item row="2" column="1" colspan="2">
+    <widget class="QLineEdit" name="tf_username"/>
    </item>
   </layout>
  </widget>
