--- a/src/GUI/Plugins/Speed/GUI_Speed.ui
+++ b/src/GUI/Plugins/Speed/GUI_Speed.ui
@@ -6,22 +6,49 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>264</width>
-    <height>43</height>
+    <width>332</width>
+    <height>133</height>
    </rect>
   </property>
   <layout class="QGridLayout" name="grid_layout">
    <property name="horizontalSpacing">
     <number>20</number>
    </property>
-   <item row="1" column="0">
-    <widget class="QCheckBox" name="cb_active">
-     <property name="text">
-      <string>Active</string>
+   <item row="4" column="1">
+    <widget class="QSpinBox" name="sb_concert_pitch">
+     <property name="minimum">
+      <number>400</number>
+     </property>
+     <property name="maximum">
+      <number>480</number>
+     </property>
+     <property name="value">
+      <number>440</number>
      </property>
     </widget>
    </item>
-   <item row="0" column="2" rowspan="2">
+   <item row="4" column="0">
+    <widget class="QLabel" name="lab_concert_pitch">
+     <property name="text">
+      <string>Concert pitch</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="2">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>Hz</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="0" colspan="3">
+    <widget class="Line" name="line">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="2">
     <widget class="QLabel" name="lab_speed">
      <property name="minimumSize">
       <size>
@@ -43,7 +70,7 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="1" rowspan="2">
+   <item row="2" column="0" colspan="2">
     <widget class="SayonaraSlider" name="sli_speed">
      <property name="minimum">
       <number>50</number>
@@ -65,6 +92,20 @@
      </property>
     </widget>
    </item>
+   <item row="1" column="0" colspan="2">
+    <widget class="QCheckBox" name="cb_preserve_pitch">
+     <property name="text">
+      <string>Preserve pitch</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="0" colspan="2">
+    <widget class="QCheckBox" name="cb_active">
+     <property name="text">
+      <string>Active</string>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <customwidgets>
@@ -75,5 +116,22 @@
   </customwidget>
  </customwidgets>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>cb_active</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>sb_concert_pitch</receiver>
+   <slot>setDisabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>129</x>
+     <y>19</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>212</x>
+     <y>107</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
